# Fast-Voxel-Traversal-Python

./: .gitignore  README.md  pyproject.toml
Fast_Voxel_Traversal_Python/: __init__.py
examples/: example.ipynb
fast_voxel_traversal/: __init__.py  _core.py  grid.py  ray.py  traversal.py
tests/: test_grid.py  test_ray.py  test_traversal.py
